# ramses-logic

./: .ansible-lint  .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitlint  .gitmodules  .readthedocs.yml  .yamllint  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  README.md  README.rst  SECURITY.md  api.html  build.html  changelog_ref.html  dev.html  genindex.html  index.html  objects.inv  readme_ref.html  search.html  searchindex.js  tox.ini
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile.in
doc/sphinx/: api.rst  build.rst  conf.py  dev.rst  index.rst  lua_syntax.rst  requirements.txt  viewer.rst
doc/sphinx/classes/: AnimationNode.rst  Collection.rst  DataArray.rst  EInterpolationType.rst  ELogMessageType.rst  EPropertyType.rst  EStandardModule.rst  ErrorData.rst  GetRamsesLogicVersion.rst  IsPrimitiveProperty.rst  Iterator.rst  LogicEngine.rst  LogicEngineReport.rst  LogicNode.rst  LogicObject.rst  LuaConfig.rst  LuaInterface.rst  LuaModule.rst  LuaScript.rst  Property.rst  index.rst  (+11 more)
examples/: CMakeLists.txt
examples/00_minimal/: main.cpp
examples/01_properties_simple/: main.cpp
examples/01a_primitive_properties/: main.cpp
examples/01b_struct_properties/: main.cpp
examples/01c_array_properties/: main.cpp
examples/02_errors_compile_time/: main.cpp
examples/02_properties_complex/: main.cpp
examples/03_errors_compile_time/: main.cpp
examples/03_errors_runtime/: main.cpp
examples/04_errors_runtime/: main.cpp
examples/04_ramses_scene/: main.cpp
examples/05_ramses_scene/: main.cpp
examples/05_serialization/: main.cpp
examples/06_override_print/: main.cpp
examples/06_serialization/: main.cpp
examples/07_links/: main.cpp
examples/08_animation/: main.cpp
examples/08a_static_animation/: main.cpp
examples/08b_dynamic_animation/: main.cpp
examples/09_modules/: main.cpp
examples/10_globals/: main.cpp
examples/12_anchor_point/: main.cpp
examples/13_render_order/: main.cpp
examples/14_skinbinding/: main.cpp
examples/15_meshnodebinding/: main.cpp
examples/shared/: SimpleRenderer.h
src/: CMakeLists.txt
src/test/: CollectionTest.cpp  IteratorTest.cpp  LoggerTest.cpp  LogicEngineTest.cpp  LogicEngineTest_Base.h  LogicEngineTest_ErrorHandling.cpp  LogicEngineTest_Factory.cpp  LogicEngineTest_Linking.cpp  LogicEngineTest_Lookup.cpp  LogicEngineTest_Serialization.cpp  LogicEngineTest_Update.cpp  LogicNodeConnectorTest.cpp  LogicNodeDummy.h  LogicNodeGraphTest.cpp  LuaScriptTest_Base.h  LuaScriptTest_Interface.cpp  LuaScriptTest_Lifecycle.cpp  LuaScriptTest_Runtime.cpp  LuaScriptTest_Syntax.cpp  LuaScriptTest_Types.cpp  LuaStateImplTest.cpp  PropertyTest.cpp  PropertyTypeTest.cpp  RamsesAppearanceBindingTest.cpp  RamsesHelperTest.cpp  RamsesLogicVersionTest.cpp  RamsesNodeBindingTest.cpp  SolStateTest.cpp
tools/ramses-logic-utils/: ArgumentParser.h  CMakeLists.txt  Result.h
tools/ramses-logic-viewer/: Arguments.h  CMakeLists.txt  ImguiClientHelper.cpp  ImguiClientHelper.h  LogicViewer.cpp  LogicViewer.h  LogicViewerApp.cpp  LogicViewerApp.h  LogicViewerGui.cpp  LogicViewerGui.h  LogicViewerGuiApp.cpp  LogicViewerLuaTypes.cpp  LogicViewerLuaTypes.h  LogicViewerSettings.cpp  LogicViewerSettings.h  SceneSetup.h  UpdateReportSummary.h  main.cpp
unittests/: AnimationNodeTest.cpp  ApiObjectsTest.cpp  CMakeLists.txt  CollectionTest.cpp  DataArrayTest.cpp  DirectedAcyclicGraphTest.cpp  ErrorReportingTest.cpp  IteratorTest.cpp  LogTestUtils.h  LoggerTest.cpp  LogicEngineTest_Animations.cpp  LogicEngineTest_Base.h  LogicEngineTest_DependencyExtraction.cpp  LogicEngineTest_Dirtiness.cpp  LogicEngineTest_ErrorHandling.cpp  LogicEngineTest_Factory.cpp  LogicEngineTest_Linking.cpp  LogicEngineTest_Lookup.cpp  LogicEngineTest_Serialization.cpp  LogicEngineTest_Update.cpp  LogicEngineTest_UpdateReport.cpp  LogicNodeConnectorTest.cpp  LogicNodeDependenciesTest.cpp  LogicNodeDummy.cpp  LogicNodeDummy.h  LogicNodeGraphTest.cpp  LogicNodeTest.cpp  LuaCustomizationsTest.cpp  LuaModuleTest.cpp  LuaScriptTest_Base.h  LuaScriptTest_Debug.cpp  LuaScriptTest_Init.cpp  LuaScriptTest_Interface.cpp  LuaScriptTest_Lifecycle.cpp  LuaScriptTest_Modules.cpp  LuaScriptTest_Runtime.cpp  LuaScriptTest_Serialization.cpp  LuaScriptTest_Syntax.cpp  LuaScriptTest_Types.cpp  LuaTypeConversionsTest.cpp  (+13 more)
unittests/api/: AnchorPointTest.cpp  AnimationNodeConfigTest.cpp  AnimationNodeTest.cpp  AnimationNodeWithDataPropertiesTest.cpp  DataArrayTest.cpp  LogicEngineTest_Animations.cpp  LogicEngineTest_Compatibility.cpp  LogicEngineTest_DependencyExtraction.cpp  LogicEngineTest_Dirtiness.cpp  LogicEngineTest_ErrorHandling.cpp  LogicEngineTest_Factory.cpp  LogicEngineTest_Linking.cpp  LogicEngineTest_LogicNodeUpdateStatistics.cpp  LogicEngineTest_Lookup.cpp  LogicEngineTest_Serialization.cpp  LogicEngineTest_Update.cpp  LogicEngineTest_UpdateReport.cpp  LogicEngineTest_Validation.cpp  LogicNodeTest.cpp  LuaConfigTest.cpp  LuaInterfaceTest.cpp  LuaModuleTest.cpp  LuaScriptTest_Debug.cpp  LuaScriptTest_Init.cpp  LuaScriptTest_Interface.cpp  LuaScriptTest_Lifecycle.cpp  LuaScriptTest_Modules.cpp  LuaScriptTest_Runtime.cpp  LuaScriptTest_Serialization.cpp  LuaScriptTest_Syntax.cpp  LuaScriptTest_Types.cpp  PropertyTest.cpp  PropertyTypeTest.cpp  RamsesAppearanceBindingTest.cpp  RamsesCameraBindingTest.cpp  RamsesMeshNodeBindingTest.cpp  RamsesNodeBindingTest.cpp  RamsesRenderPassBindingTest.cpp  SkinBindingTest.cpp  TimerNodeTest.cpp
unittests/internal/: ApiObjectsTest.cpp  EnvironmentProtectionTest.cpp  ErrorReportingTest.cpp  LogicNodeDependenciesTest.cpp  LuaCustomizationsTest.cpp  LuaTypeConversionsTest.cpp  MathTest.cpp  PropertyTypeExtractorTest.cpp  RamsesObjectResolverTest.cpp  RotationUtilsTest.cpp  SolStateTest.cpp  WrappedLuaPropertyTest.cpp
unittests/res/: testLogic.rlogic  testLogic_02.rlogic  testLogic_03.rlogic
unittests/shared/: FeatureLevelTestValues.h  FileDescriptorHelper.h  LogicEngineTest_Base.h  LogicNodeDummy.h  RamsesObjectResolverMock.h  RamsesTestUtils.h  SerializationTestUtils.h
unittests/testAssetProducer/: CMakeLists.txt  main.cpp
(+332 files in other folders)
